# 42vienna-robotframework-workshop

./: .gitignore  PLAN.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pr-feedback.yml  robot-tests.yml
docs/: exercises.md  index.md  student-workflow.md  troubleshooting.md
docs/keywords/: cart_page.md  checkout_page.md  common.md  index.md  login_page.md  products_page.md
resources/: cart_page.resource  checkout_page.resource  common.resource  login_page.resource  products_page.resource  saucedemo.resource
scripts/: generate_keyword_docs.py
tests/00_setup_verification/: verify_setup.robot
tests/01_first_test/: first_browser_test.robot
tests/03_product_tests/: product_catalog.robot
tests/04_cart_tests/: shopping_cart.robot
tests/05_checkout_tests/: checkout_flow.robot
tests/student_exercises/: trial.robot
