[project]
name = "rf-workshop-42vienna"
version = "0.1.0"
description = "Robot Framework E2E testing workshop for 42 Vienna"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "robotframework>=7.0",
    "robotframework-browser>=19.0",
]

[dependency-groups]
dev = [
    "robotframework-robocop>=8.0",
    "rf-mcp>=0.30",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.0",
]

[tool.uv]
package = false

[tool.robot]
outputdir = "results"
loglevel = "DEBUG"

[tool.robot.variables]
BASE_URL = "https://www.saucedemo.com"
HEADLESS = "true"

# Robocop default ruleset "minimal" version 0.1.0
# Guiding principles:
#   Issues that will break runtime: Error
#   Deprecation issues with removal plan: Warning
#   Deprecation issues without removal plan: Informational
#   Future deprecation issues: Disable
#   Opinionated issues: Disable
#   Code style issues: Disable
#   Issues that cause unexpected behavior: Informational
#   Coding errors: Warning or Informational
[tool.robocop.lint]
select = [
    "set-keyword-with-type",
    "unused-argument",
    "undefined-argument-default",
    "undefined-argument-value",
    "invalid-argument",
    "duplicated-argument-name",
    "ignored-data",
    "bom-encoding-in-file",
    "deprecated-singular-header",
    "deprecated-return-setting",
    "duplicated-test-case",
    "duplicated-keyword",
    "duplicated-variable",
    "duplicated-resource",
    "both-tests-and-tasks",
    "duplicated-setting",
    "parsing-error",
    "missing-keyword-name",
    "invalid-continuation-mark",
    "non-existing-setting",
    "setting-not-supported",
    "invalid-for-loop",
    "invalid-if",
    "return-in-test-case",
    "invalid-section-in-resource",
    "invalid-setting-in-resource",
    "unsupported-setting-in-init-file",
    "empty-variables-import",
    "empty-resource-import",
    "empty-library-import",
    "keyword-after-return",
    "statement-outside-loop",
    "unreachable-code",
    "keyword-name-is-reserved-word",
    "else-not-upper-case",
    "keyword-name-is-empty",
    "test-case-name-is-empty",
    "empty-library-alias",
    "bdd-without-keyword-call",
    "invalid-section",
    "variable-not-left-aligned",
    "suite-setting-not-left-aligned",
    "not-enough-whitespace-after-setting",
    "not-enough-whitespace-after-newline-marker",
    "not-enough-whitespace-after-variable",
    "not-enough-whitespace-after-suite-setting",
    "tag-with-or-and",
    "duplicated-tags",
    "empty-variable",
    "unused-variable",
    "possible-variable-overwriting",
    "inconsistent-variable-name",
    "overwriting-reserved-variable",
    "duplicated-assigned-var-name",
]
ignore = [
    "not-allowed-char-in-filename",
    "mixed-task-test-settings",
    "wrong-case-in-keyword-call",
    "test-case-section-out-of-order",
    "keyword-section-out-of-order",
    "section-out-of-order",
    "trailing-whitespace",
    "missing-trailing-blank-line",
    "empty-lines-between-sections",
    "empty-lines-between-test-cases",
    "empty-lines-between-keywords",
    "mixed-tabs-and-spaces",
    "bad-indent",
    "empty-line-after-section",
    "too-many-trailing-blank-lines",
    "misaligned-continuation",
    "consecutive-empty-lines",
    "empty-lines-in-statement",
    "misaligned-continuation-row",
    "bad-block-indent",
    "first-argument-in-new-line",
    "tag-with-space",
    "tag-with-reserved-word",
    "could-be-test-tags",
    "tag-already-set-in-test-tags",
    "unnecessary-default-tags",
    "empty-tags",
    "could-be-keyword-tags",
    "tag-already-set-in-keyword-tags",
    "variable-overwritten-before-usage",
    "no-global-variable",
    "no-suite-variable",
    "no-test-variable",
    "non-local-variables-should-be-uppercase",
    "hyphen-in-variable-name",
]
configure = [
    "invalid-argument.severity=E",
    "duplicated-keyword.severity=E",
    "both-tests-and-tasks.severity=E",
    "duplicated-setting.severity=E",
    "parsing-error.severity=E",
    "missing-keyword-name.severity=E",
    "invalid-continuation-mark.severity=E",
    "non-existing-setting.severity=E",
    "setting-not-supported.severity=E",
    "invalid-for-loop.severity=E",
    "invalid-if.severity=E",
    "return-in-test-case.severity=E",
    "invalid-section-in-resource.severity=E",
    "invalid-setting-in-resource.severity=E",
    "unsupported-setting-in-init-file.severity=E",
    "empty-variables-import.severity=E",
    "empty-resource-import.severity=E",
    "empty-library-import.severity=E",
    "statement-outside-loop.severity=E",
    "else-not-upper-case.severity=E",
    "keyword-name-is-empty.severity=E",
    "test-case-name-is-empty.severity=E",
    "invalid-section.severity=E",
    "variable-not-left-aligned.severity=E",
    "suite-setting-not-left-aligned.severity=E",
    "not-enough-whitespace-after-setting.severity=E",
    "not-enough-whitespace-after-newline-marker.severity=E",
    "not-enough-whitespace-after-variable.severity=E",
    "not-enough-whitespace-after-suite-setting.severity=E",

    "set-keyword-with-type.severity=W",
    "unused-argument.severity=W",
    "duplicated-argument-name.severity=W",
    "deprecated-singular-header.severity=W",
    "bdd-without-keyword-call.severity=W",
    "unused-variable.severity=W",

    "undefined-argument-default.severity=I",
    "undefined-argument-value.severity=I",
    "ignored-data.severity=I",
    "bom-encoding-in-file.severity=I",
    "deprecated-return-setting.severity=I",
    "duplicated-test-case.severity=I",
    "duplicated-variable.severity=I",
    "duplicated-resource.severity=I",
    "keyword-after-return.severity=I",
    "unreachable-code.severity=I",
    "keyword-name-is-reserved-word.severity=I",
    "empty-library-alias.severity=I",
    "tag-with-or-and.severity=I",
    "duplicated-tags.severity=I",
    "empty-variable.severity=I",
    "possible-variable-overwriting.severity=I",
    "inconsistent-variable-name.severity=I",
    "overwriting-reserved-variable.severity=I",
    "duplicated-assigned-var-name.severity=I",
]
